# nanomoe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
journal/: 2026-01-18-data.md  2026-01-19-design.md  2026-01-24-prefetch.md
scripts/: bench_prefetch_off.sh  bench_prefetch_on.sh  explore_math_data.py  pretrain.py  pretrain_nemomath_full.sh  pretrain_nemomath_full_ddp.sh  sft.py
src/nanomoe/: __init__.py
src/nanomoe/data/: __init__.py  buffer.py  packed_dataset.py  packing.py  rl_dataset.py  sft_dataset.py  types.py
src/nanomoe/experiments/: pretrain.py
src/nanomoe/model/: __init__.py  attention.py  config.py  model.py  moe.py  moe_kernel.py  output.py
src/nanomoe/sample/: __init__.py  generate.py
src/nanomoe/train/: __init__.py  checkpoint.py  grpo.py  logging.py  loop.py  loss.py  lr_scheduler.py  prefetch.py
tests/: test_buffer.py  test_data.py  test_model_output.py  test_moe.py  test_rl_dataset.py  test_sample.py  test_train.py
