[project]
name = "nanomoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "chiu.justin.t@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "datasets>=4.5.0",
    "ipdb>=0.13.13",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "vl-convert-python>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
