[project]
name = "nanomoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "chiu.justin.t@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "datasets>=4.5.0",
    "hf-transfer>=0.1.9",
    "ipdb>=0.13.13",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "vl-convert-python>=1.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.0.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# torch.distributed functions are conditionally available at runtime
# wandb is an optional dependency with try/except import
possibly-missing-attribute = "ignore"
unresolved-import = "warn"
